fix(build): replace deprecated Paths.get() with Path.of() in FileUploadResource
Modernizer plugin (v3.4.0) enforces java.nio.file.Path.of() over
java.nio.file.Paths.get(). Two call sites updated; Paths import removed.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>